Fix relative paths to static resources

--- a/LinEq/Views/Home/Index.cshtml
+++ b/LinEq/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
 <head>
     <title>@ViewBag.Title</title>
     <meta charset="UTF-8">
-    <script src="@Url.Content("/Scripts/jquery-1.8.2.js")"></script>
-    <script src="@Url.Content("/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
-    <link rel="stylesheet" href="@Url.Content("/Content/Site.css")" type="text/css">
+    <script src="@Url.Content("~/Scripts/jquery-1.8.2.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
+    <link rel="stylesheet" href="@Url.Content("~/Content/Site.css")" type="text/css">
 </head>
 <body>
     <div id="page">
